examples/syntaxErrors/typeNotDefinedInSignatureError.lcp


main : A -> A -> A
main x y = ()
